# serializer version: 1
# name: test_source_notes_snap
  '''
    <tfoot class="gt_sourcenotes">
    
    <tr>
      <td class="gt_sourcenote" colspan="9">An <strong>important</strong> note.</td>
    </tr>
  
  
    <tr>
      <td class="gt_sourcenote" colspan="9">Another <em>important</em> note.</td>
    </tr>
  
  
    <tr>
      <td class="gt_sourcenote" colspan="9">A plain note.</td>
    </tr>
  
  
    <tr>
      <td class="gt_sourcenote" colspan="9">An <strong>HTML heavy</strong> note.</td>
    </tr>
  
  </tfoot>
  '''
# ---
# name: test_styling_data_1
  '''
  <tbody class="gt_table_body">
  <tr>
    <td style="color: red;" class="gt_row gt_right">0.1111</td>
    <td style="color: red;" class="gt_row gt_left">apricot</td>
  </tr>
  <tr>
    <td style="color: red;" class="gt_row gt_right">2.222</td>
    <td style="color: red;" class="gt_row gt_left">banana</td>
  </tr>
  <tr>
    <td style="color: red;" class="gt_row gt_right">33.33</td>
    <td style="color: red;" class="gt_row gt_left">coconut</td>
  </tr>
  </tbody>
  '''
# ---
# name: test_styling_data_2
  '''
  <tbody class="gt_table_body">
  <tr>
    <td class="gt_row gt_right">0.1111</td>
    <td style="color: red;" class="gt_row gt_left">apricot</td>
  </tr>
  <tr>
    <td class="gt_row gt_right">2.222</td>
    <td style="color: red;" class="gt_row gt_left">banana</td>
  </tr>
  <tr>
    <td class="gt_row gt_right">33.33</td>
    <td style="color: red;" class="gt_row gt_left">coconut</td>
  </tr>
  </tbody>
  '''
# ---
# name: test_styling_data_3
  '''
  <tbody class="gt_table_body">
  <tr>
    <td class="gt_row gt_right">0.1111</td>
    <td style="color: red;" class="gt_row gt_left">apricot</td>
  </tr>
  <tr>
    <td class="gt_row gt_right">2.222</td>
    <td class="gt_row gt_left">banana</td>
  </tr>
  <tr>
    <td class="gt_row gt_right">33.33</td>
    <td style="color: red;" class="gt_row gt_left">coconut</td>
  </tr>
  </tbody>
  '''
# ---
# name: test_styling_data_4
  '''
  <tbody class="gt_table_body">
  <tr>
    <td class="gt_row gt_right">0.1111</td>
    <td class="gt_row gt_left">apricot</td>
  </tr>
  <tr>
    <td class="gt_row gt_right">2.222</td>
    <td class="gt_row gt_left">banana</td>
  </tr>
  <tr>
    <td class="gt_row gt_right">33.33</td>
    <td class="gt_row gt_left">coconut</td>
  </tr>
  </tbody>
  '''
# ---
# name: test_styling_data_5
  '''
  <tbody class="gt_table_body">
  <tr>
    <td class="gt_row gt_right">0.1111</td>
    <td class="gt_row gt_left">apricot</td>
  </tr>
  <tr>
    <td class="gt_row gt_right">2.222</td>
    <td class="gt_row gt_left">banana</td>
  </tr>
  <tr>
    <td class="gt_row gt_right">33.33</td>
    <td class="gt_row gt_left">coconut</td>
  </tr>
  </tbody>
  '''
# ---
# name: test_styling_data_6
  '''
  <tbody class="gt_table_body">
  <tr>
    <td class="gt_row gt_right">0.1111</td>
    <td class="gt_row gt_left">apricot</td>
  </tr>
  <tr>
    <td class="gt_row gt_right">2.222</td>
    <td class="gt_row gt_left">banana</td>
  </tr>
  <tr>
    <td class="gt_row gt_right">33.33</td>
    <td class="gt_row gt_left">coconut</td>
  </tr>
  </tbody>
  '''
# ---
